--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,7 @@
   <div id="menu-content" class="menu-dropdown">
     <div onclick="openOverlay1()">About</div>
     <% if !session[:id] %>
-      <div onclick="openOverlay2()">Signup</div>
+      <!-- <div onclick="openOverlay2()">Signup</div> -->
       <div onclick="">Spotify Authentication</div>
     <% else %>
       <%= link_to "Profile", "/profile" %>
@@ -16,30 +16,34 @@
   </div>
 </div>
 
-<!-- MENU OVERLAYS -->
+<!-- MENU OVERLAY -->
 <div id="overlay1" class="overlay-container">
   <div class="closebtn" onclick="closeOverlay1()">&times;</div>
   <div class="overlay-about">
-    <p>'Feeln' is your go-to content generator app based...you guessed it! Your current mood!<br>
-        Select an emoji and watch the magic to happen!
+    <p>'Feeln' is your go-to content generator app based on...you guessed it! Your current mood!<br>
+        Select an emoji and watch the magic happen!
     </p>
   </div>
 </div>
 
-<div id="overlay2" class="overlay-container">
+<div>
+  <%= link_to image_tag("https://static1.squarespace.com/static/59a6fd41bebafb8b3f420544/t/5c154a69575d1f2511f05f88/1523895598897/", :class => 'spotifyBtn'), spotify_logins_create_path %>
+</div>
+
+<!-- <div id="overlay2" class="overlay-container">
   <div class="closebtn" onclick="closeOverlay2()">&times;</div>
   <div class="overlay-signup">
-    <%= form_for @user, remote:true do |f| %>
+    <%#= form_for @user, remote:true do |f| %>
       <h2>Signup</h2>
-      <%= f.email_field :email, placeholder: "Email (e.g. example@hotmail.com)" %><br>
-      <%= f.text_field :username, placeholder: "Username" %><br>
-      <%= f.text_field :first_name, placeholder: "First Name" %><br>
-      <%= f.text_field :last_name, placeholder: "Last Name" %><br>
-      <%= f.password_field :password, placeholder: "Password (min. 8 characters)" %><br>
-      <%= f.submit("Create", {:class => 'createBtn'}) %>
-    <% end %>
+      <%#= f.email_field :email, placeholder: "Email (e.g. example@hotmail.com)" %><br>
+      <%#= f.text_field :username, placeholder: "Username" %><br>
+      <%#= f.text_field :first_name, placeholder: "First Name" %><br>
+      <%#= f.text_field :last_name, placeholder: "Last Name" %><br>
+      <%#= f.password_field :password, placeholder: "Password (min. 8 characters)" %><br>
+      <%#= f.submit("Create", {:class => 'createBtn'}) %>
+    <%# end %>
   </div>
-</div>
+</div> -->
 
 <!-- EMOJI GRID -->
 <h1 id="main">What's The Mood?</h1>
