--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,51 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <!-- MENU SECTION  -->
+    <div class="menu-container" onclick="openMenu()">
+      <div class="bar1" style=""></div>
+      <div class="bar2" style=""></div>
+      <div class="bar3" style=""></div>
+
+      <div id="menu-content" class="menu-dropdown" style="">
+        <div onclick="openOverlay1()">About</div>
+        <% if !session[:id] %>
+          <div onclick="openOverlay2()">Signup</div>
+          <div onclick="">Spotify Authentication</div>
+        <% else %>
+          <%= link_to "Profile", "/profile" %>
+          <%= link_to "Logout", logout_path, method: :post %>
+        <% end %>
+      </div>
+    </div>
+
+    <!-- MENU OVERLAYS -->
+    <div id="overlay1" class="overlay-container" style="">
+      <div class="closebtn" onclick="closeOverlay1()">&times;</div>
+      <div class="overlay-about">
+        <p>'Feeln' is your go-to content generator app based...you guessed it! Your current mood!<br>
+            Select an emoji and watch the magic to happen!
+        </p>
+      </div>
+    </div>
+
+    <div id="overlay2" class="overlay-container" style="">
+      <div class="closebtn" onclick="closeOverlay2()">&times;</div>
+      <div class="overlay-signup">
+        <% if !current_spotify_user %>
+          <%= form_for @user, remote:true do |f| %>
+            <h2>Signup</h2>
+            <%= f.email_field :email, placeholder: "Email (e.g. example@hotmail.com)" %><br>
+            <%= f.text_field :username, placeholder: "Username" %><br>
+            <%= f.text_field :first_name, placeholder: "First Name" %><br>
+            <%= f.text_field :last_name, placeholder: "Last Name" %><br>
+            <%= f.password_field :password, placeholder: "Password (min. 8 characters)" %><br>
+            <%= f.submit("Create", {:class => 'createBtn'}) %>
+          <% end %>
+        <% end %>
+      </div>
+    </div>
+
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <script
