--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,8 +7,7 @@
   <div id="menu-content" class="menu-dropdown">
     <div onclick="openOverlay1()">About</div>
     <% if !session[:id] %>
-      <!-- <div onclick="openOverlay2()">Signup</div> -->
-      <div onclick="">Spotify Authentication</div>
+      <div><%= link_to "Login", "spotify_users/create" %></div>
     <% else %>
       <%= link_to "Profile", "/profile" %>
       <%= link_to "Logout", logout_path, method: :post %>
@@ -16,19 +15,29 @@
   </div>
 </div>
 
+<!-- SPOTIFY CONNECT BUTTON -->
+<div>
+  <% if !session[:id] %>
+  <%= link_to image_tag("https://static1.squarespace.com/static/59a6fd41bebafb8b3f420544/t/5c154a69575d1f2511f05f88/1523895598897/", :class => 'spotifyBtn'), spotify_logins_create_path %>
+  <% end %>
+</div>
+
 <!-- MENU OVERLAY -->
 <div id="overlay1" class="overlay-container">
   <div class="closebtn" onclick="closeOverlay1()">&times;</div>
   <div class="overlay-about">
-    <p>'Feeln' is your go-to content generator app based on...you guessed it! Your current mood!<br>
-        Select an emoji and watch the magic happen!
-    </p>
+    <h4>
+      'Feelng' is your go-to content generator app based on...you guessed it - your current mood!<br>
+       Select an emoji and watch the magic happen!
+    </h4>
+    <h3>Steps:</h3>
+    <ol>
+      <li>Connect using your Spotify account</li>
+      <li>Pick a mood</li>
+    </ol>
   </div>
 </div>
 
-<div>
-  <%= link_to image_tag("https://static1.squarespace.com/static/59a6fd41bebafb8b3f420544/t/5c154a69575d1f2511f05f88/1523895598897/", :class => 'spotifyBtn'), spotify_logins_create_path %>
-</div>
 
 <!-- <div id="overlay2" class="overlay-container">
   <div class="closebtn" onclick="closeOverlay2()">&times;</div>
