--- a/app/views/pages/results.html.erb
+++ b/app/views/pages/results.html.erb
@@ -9,14 +9,21 @@
 
   <div id="menu-content" class="menu-dropdown" style="background-color: <%=@photo['color']%>">
     <div onclick="openOverlay1()">About</div>
+    <div><%= link_to "Home", root_path %></div>
     <% if !session[:id] %>
-      <div onclick="openOverlay2()">Signup</div>
-      <div onclick="">Spotify Authentication</div>
+      <div><%= link_to "Login", login_path, method: :post %></div>
     <% else %>
       <%= link_to "Profile", "/profile" %>
       <%= link_to "Logout", logout_path, method: :post %>
     <% end %>
   </div>
+</div>
+
+<!-- SPOTIFY CONNECT BUTTON -->
+<div>
+  <% if !session[:id] %>
+    <%= link_to image_tag("https://static1.squarespace.com/static/59a6fd41bebafb8b3f420544/t/5c154a69575d1f2511f05f88/1523895598897/", :class => 'spotifyBtn'), spotify_logins_create_path %>
+  <% end %>
 </div>
 
 <!-- MENU OVERLAYS -->
@@ -29,20 +36,20 @@
   </div>
 </div>
 
-<div id="overlay2" class="overlay-container" style="background-color: <%=@photo['color']%>">
+<!-- <div id="overlay2" class="overlay-container" style="background-color: <%#=@photo['color']%>">
   <div class="closebtn" onclick="closeOverlay2()">&times;</div>
   <div class="overlay-signup">
-    <%= form_for @user, remote:true do |f| %>
+    <%#= form_for @user, remote:true do |f| %>
       <h2>Signup</h2>
-      <%= f.email_field :email, placeholder: "Email (e.g. example@hotmail.com)" %><br>
-      <%= f.text_field :username, placeholder: "Username" %><br>
-      <%= f.text_field :first_name, placeholder: "First Name" %><br>
-      <%= f.text_field :last_name, placeholder: "Last Name" %><br>
-      <%= f.password_field :password, placeholder: "Password (min. 8 characters)" %><br>
-      <%= f.submit("Create", {:class => 'createBtn'}) %>
-    <% end %>
+      <%#= f.email_field :email, placeholder: "Email (e.g. example@hotmail.com)" %><br>
+      <%#= f.text_field :username, placeholder: "Username" %><br>
+      <%#= f.text_field :first_name, placeholder: "First Name" %><br>
+      <%#= f.text_field :last_name, placeholder: "Last Name" %><br>
+      <%#= f.password_field :password, placeholder: "Password (min. 8 characters)" %><br>
+      <%#= f.submit("Create", {:class => 'createBtn'}) %>
+    <%# end %>
   </div>
-</div>
+</div> -->
 
 <!-- RESULTS HEADER & MOOD ELEMENTS -->
 <div class="header">
