added some stuff to journal view

--- a/app/views/journals/view.html.erb
+++ b/app/views/journals/view.html.erb
@@ -3,7 +3,8 @@
   <%= week_calendar(attribute: :created_at, events: @entries) do |date, entries| %>
     <%= date %><br>
     <% entries.each do |entry| %>
-      <%= image_tag("emojis/#{entry.mood}") %>
+      <%= link_to image_tag("emojis/#{entry.mood}"), entry_path(entry.id) %>
+      <%# image_tag("emojis/#{entry.mood}") %>
     <% end %>
   <% end %>
 
