changed some names and reworked some routes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
           <div onclick="openOverlay2()">Signup</div>
           <div onclick="">Spotify Authentication</div>
         <% else %>
-          <%= link_to "Profile", "/profile" %>
+          <%= link_to "My Journal", "/journal" %>
           <%= link_to "Logout", logout_path, method: :post %>
         <% end %>
       </div>
