--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -16,9 +16,9 @@ body {
 }
 
 .bar1, .bar2, .bar3 {
-  width: 25px;
-  height: 3px;
-  margin: 3px 0;
+  width: 50px;
+  height: 5px;
+  margin: 10px 0;
   background-color: black;
   transition: .5s;
   position: relative;
@@ -277,10 +277,32 @@ h1 {
 }
 
 @media only screen and (max-width: 600px) {
-#entry_content {
-  height: 20vh;
-  width: 80vw;
-}
+  #entry_content {
+    height: 20vh;
+    width: 80vw;
+  }
+  .menu-container {
+    top: 2%;
+    right: 5%;
+  }
+  .bar1, .bar2, .bar3 {
+    width: 35px;
+    height: 4px;
+    margin: 5px 0;
+    background-color: black;
+    transition: .5s;
+    position: relative;
+    right: 10px;
+    top: 10px;
+  }
+  #main {
+    text-align: left;
+    margin-left: 5%;
+    padding: 3vh 0;
+  }
+  h1 {
+    font-size: 1.8rem;
+  }
 }
 
 #entry_content {
