--- a/app/views/shared/_music.html.erb
+++ b/app/views/shared/_music.html.erb
@@ -1,5 +1,5 @@
 <div class="feature" id="music" style="border: 10px solid <%=@photo['color']%>">
   <h2>Listen</h2>
-  <h3>Title</h3>
-  <h4>Artist</h4>
+  <img src="<%=@playlist_img%>" alt="" id="playlist_img">
+  <p id="playlist_name"><a href="<%= @playlist["external_urls"]["spotify"] %>"><%=@playlist_name%></a></p>
 </div>
