--- a/app/views/pages/calendar.html.erb
+++ b/app/views/pages/calendar.html.erb
@@ -1,23 +1,24 @@
 <div class="profile-container">
+  <h2>Your Moods</h2>
 
   <%= month_calendar do |date| %>
     <%= date.day %>
   <% end %>
 
-  <div class="date-header">
+  <!-- <div class="date-header">
     <h2 style="text-align:center;">Date</h2>
   </div>
 
   <div class="results-wrapper">
-    <div class="">
+    <a href="/mood">
       <img src="assets/emojis/alluring.png" alt="">
-    </div>
+    </a>
     <div class="">
       <img src="assets/emojis/cool.png" alt="">
     </div>
     <div class="">
       <img src="assets/emojis/furious.png" alt="">
     </div>
-  </div>
+  </div> -->
 
 </div>
