--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,16 +29,16 @@
     <div id="overlay1" class="overlay-container" style="">
       <div class="closebtn" onclick="closeOverlay1()">&times;</div>
       <div class="overlay-about">
-        <p>'Feelng' is your go-to content generator app based on your current mood.<br>
-            Select an emoji and watch the magic to happen!
+        <h2><span>'Feelng'</span> is your go-to content generator app based on your current mood.<br>
+        Select an emoji and watch the magic to happen!</h2>
 
-            Feelng uses the following APIs to set the mood:<br>
-            Poetry: <a href="http://poetrydb.org/index.html">PoetryDB</a><br>
-            Music: <a href="https://developer.spotify.com/documentation/web-api/">Spotify</a><br>
-            Events/Attractions: <a href="https://developer.foursquare.com/">Foursquare</a><br>
-            Images: <a href="https://unsplash.com/developers">Unsplash</a><br>
+            <h3>Feelng uses the following APIs to set the mood:</h3>
+            <p>Poetry: <a href="http://poetrydb.org/index.html">PoetryDB</a></p>
+            <p>Music: <a href="https://developer.spotify.com/documentation/web-api/">Spotify</a></p>
+            <p>Events/Attractions: <a href="https://developer.foursquare.com/">Foursquare</a></p>
+            <p>Images: <a href="https://unsplash.com/developers">Unsplash</a></p>
             <% if request.path == '/mood' %>
-            The image on this page is by <a href="<%=@photo['user']['links']['html']%>"><%= @photo['user']['name'] %></a>
+            <p>The image on this page is by <a href="<%=@photo['user']['links']['html']%>"><%= @photo['user']['name'] %></a></p>
             <% end %>
 
         </p>
