--- a/app/views/shared/_music.html.erb
+++ b/app/views/shared/_music.html.erb
@@ -1,5 +1,9 @@
 <div class="feature" id="music" style="border: 10px solid <%=@photo['color']%>">
   <h2>Listen</h2>
-  <img src="<%=@playlist_img%>" alt="" id="playlist_img">
-  <p id="playlist_name"><a href="<%= @playlist["external_urls"]["spotify"] %>"><%=@playlist_name%></a></p>
+  <%if current_spotify_user%>
+    <img src="<%=@playlist_img%>" alt="" id="playlist_img">
+    <p id="playlist_name"><a href="<%= @playlist["external_urls"]["spotify"] %>"><%=@playlist_name%></a></p>
+  <%else%>
+    <!-- OLIVIA STYLE HERE -->
+  <%end%>
 </div>
