--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
            'Feelng' is your go-to content generator app based on your current mood.<br>
             Select an emoji and watch the magic happen!
 
-            Feelng uses the following APIs to set the mood:<br>
+            Feelng uses the following APIs to set the mood:<br></br>
             Poetry: <a href="http://poetrydb.org/index.html">PoetryDB</a><br>
             Music: <a href="https://developer.spotify.com/documentation/web-api/">Spotify</a><br>
             Events/Attractions: <a href="https://developer.foursquare.com/">Foursquare</a><br>
