styling chat box

--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,1 +1,1 @@
-<%= message.spotify_user.username %> : <%=message.body %> </b>
+<p><b><%= message.spotify_user.username %>:</b> <%=message.body %></p>
