--- a/app/assets/stylesheets/chat.scss
+++ b/app/assets/stylesheets/chat.scss
@@ -1,62 +1,32 @@
-// {box-sizing: border-box;}
-
 .chat-popup {
   position: absolute;
   right: 3%;
   height: 60vh;
   top: 20vh;
   width: 400px;
-  padding: 10px;
+  padding: 11px;
   background-color: rgba(255,255,255,0.7);
   height: 64vh;
+  h1 {
+    color: white;
+    text-shadow: 3px 3px black;
+    font-size: 2.2rem;
+    margin: 4% 0;
+
+  }
 }
 
-/* The popup chat - hidden by default */
-.form-popup {
-  display: none;
-  position: fixed;
+.new_message {
+  position: absolute;
   bottom: 0;
-  right: 15px;
-  border: 3px solid #f1f1f1;
-  z-index: 9;
-}
-
-/* Add styles to the form container */
-.form-container {
-
-}
-
-/* Full-width textarea */
-.form-container textarea {
-  width: 90%;
-  padding: 15px;
-  margin: 5px 0 22px 0;
-  border: none;
-  background: #f1f1f1;
-  resize: none;
-  max-height: 100px;
-}
-
-/* When the textarea gets focus, do something */
-.form-container textarea:focus {
-  background-color: #ddd;
-  outline: none;
-}
-
-/* Set a style for the submit/login button */
-.form-container .btn {
-  background-color: #4CAF50;
-  color: white;
-  padding: 16px 20px;
-  border: none;
-  cursor: pointer;
   width: 100%;
-  margin-bottom:10px;
-  opacity: 0.8;
-}
-
-.form-container h1 {
-  color: white;
-  text-shadow: 3px 3px black;
-  font-size: 2.2rem;
+  textarea {
+    display: inline-block;
+    width: 80%;
+    resize: none;
+  }
+  [type=submit] {
+    display: inline-block;
+    width: 10%;
+  }
 }
