--- a/app/views/chatrooms/_chatroom.html.erb
+++ b/app/views/chatrooms/_chatroom.html.erb
@@ -1,10 +1,10 @@
-<h1><%= @chatroom.mood%></h1> <!--chatroom title-->
+<h1><%= @chatroom.mood%> chat</h1> <!--chatroom title-->
 
 <%if @chatroom.messages.any?%> <!-- chatroom body -->
     <div id="messages">
         <%= render partial: 'messages/message', collection: @chatroom.messages%>
     </div>
-    
+
 <%else%>
     <div class="hidden" id="messages">
         <!--unhidden once subscribed-->
