--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -82,19 +82,21 @@ body {
 }
 
 .overlay-about {
- display: grid;
- justify-content: center;
- grid-template: 20px 20px / auto;
- grid-gap: 10px;
- position: relative;
- text-align: center;
- top: 10em;
-}
-
-.overlay-about h3, ol {
-  position: relative;
-  top: 1.5em;
-  text-align: left;
+  width: 80%;
+  margin: 20% auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  span {
+    font-size: 2rem;
+    color: white;
+    text-shadow: 3px 3px black;
+    font-weight: bold;
+  }
+  h2 {
+    margin: 2% 0;
+  }
 }
 
 .createBtn {
