--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,15 +28,6 @@
     <div id="overlay1" class="overlay-container" style="">
       <div class="closebtn" onclick="closeOverlay1()">&times;</div>
       <div class="overlay-about">
-        <p>
-           'Feelng' is your go-to content generator app based on your current mood.<br>
-            Select an emoji and watch the magic happen!
-
-            Feelng uses the following APIs to set the mood:<br></br>
-            Poetry: <a href="http://poetrydb.org/index.html">PoetryDB</a><br>
-            Music: <a href="https://developer.spotify.com/documentation/web-api/">Spotify</a><br>
-            Events/Attractions: <a href="https://developer.foursquare.com/">Foursquare</a><br>
-            Images: <a href="https://unsplash.com/developers">Unsplash</a><br>
         <h2><span>'Feelng'</span> is your go-to content generator app based on your current mood.<br>
         Select an emoji and watch the magic happen!</h2>
 
@@ -49,7 +40,8 @@
             <p>The image on this page is by <a href="<%=@photo['user']['links']['html']%>"><%= @photo['user']['name'] %></a></p>
             <% end %>
 
-
+        </div>
+      </div>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <script
