--- a/app/views/pages/results.html.erb
+++ b/app/views/pages/results.html.erb
@@ -28,6 +28,7 @@
 
 <%= render 'shared/poem' %>
 <%= render 'shared/music' %>
+<% puts @event %>
 <%= render 'shared/event' %>
 
 <div class="chat-popup" id="myForm" style="border: 10px solid <%=@photo['color']%>">
