--- a/app/assets/stylesheets/spotify_users.scss
+++ b/app/assets/stylesheets/spotify_users.scss
@@ -54,3 +54,24 @@
   padding: 10px;
   text-align: center;
 }
+
+@media only screen and (max-width: 650px) {
+  .mood-table {
+    left: 0;
+    width: 100%;
+    top: 2em;
+  }
+  .mood-table img {
+    width: 40%;
+  }
+  .profile-container h2 {
+    text-align: center;
+    font-size: 2em;
+    position: relative;
+    top: 2em;
+  }
+  .profile-header {
+    margin-right: 4%;
+    margin-top: 0%;
+  }
+}
