--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -98,6 +98,21 @@ body {
 .overlay-about p {
   position: relative;
   top: 1.5em;
+  width: 80%;
+  margin: 1.5% auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  span {
+    font-size: 2rem;
+    color: white;
+    text-shadow: 3px 3px black;
+    font-weight: bold;
+  }
+  h2 {
+    margin: 2% 0;
+  }
 }
 
 .createBtn {
