Putting events back

--- a/app/views/pages/results.html.erb
+++ b/app/views/pages/results.html.erb
@@ -29,6 +29,7 @@
 <%= render 'shared/poem' %>
 <%= render 'shared/music' %>
 <% puts @event %>
+<%= render 'shared/event' %>
 
 
 <div class="chat-popup" id="myForm" style="border: 10px solid <%=@photo['color']%>">
